apps/client/src/widgets/sidebar/RightPanelContainer.css
body.experimental-feature-new-layout #right-pane {
    display: flex;
    flex-direction: column;

    .card {
        margin-inline: 0;
        border-bottom: 1px solid var(--main-border-color);
        border-radius: 0;

        .card-header {
            padding: 1px 0 0 0;
            cursor: pointer;
            justify-content: flex-start;
            --icon-button-size: 26px;

            .icon-action {
                flex-shrink: 0;
            }

            .card-header-title {
                padding-inline: 0;
                flex-grow: 1;
                overflow: hidden;
                text-overflow: ellipsis;
                white-space: nowrap;
            }
        }

        .card-header-buttons {
            transform: none;
            top: 0;
        }

        &:last-of-type {
            border-bottom: 0;
        }

        &.collapsed .card-header > .tn-icon {
            transform: rotate(-90deg);
        }
    }

    .card.grow:not(.collapsed) {
        flex-grow: 1;
    }

    .gutter-vertical + .card .card-header {
        padding-top: 0;
    }
}

